--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,7 @@
       <div class="container">
         <div class="header__content">
           <div class="top-actions">
-            <a
-              href="#menu"
-              class="icon icon--menu"
+            <a href="#menu" class="icon icon--menu"
             >
             </a>
 
